--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^6.4.12",
     "@mui/material": "^6.4.12",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-devtools": "^5.81.2",
     "axios": "^1.10.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
